--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<div class="video" ng-controller="VideoPlayerController">
-			<video id="player" c6video c6-src="'http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF'"></video>
+			<video id="player" c6video c6-src="'http://media.w3.org/2010/05/sintel/trailer'"></video>
 			<c6-controls delegate="VideoPlayerCtrl" controller="VideoPlayerCtrl.ControlsController" class="controls"></c6-video-controls>
 		</div>
 	</body>
