--- a/src/controls/controls.html
+++ b/src/controls/controls.html
@@ -6,8 +6,10 @@
 		<button class="controls__btnReturn-icon" title="Return"><span class="ir">Return</span></button>
 		<button class="controls__btnFullscreen-icon" title="Return"><span class="ir">Fullscreen</span></button>
 		<div class="controls__slider">
-			<div class="controls__playhead" style="left: {{state.playheadPosition || 0}}%;" ng-mousedown="handle.startSeeking($event)">&nbsp;</div>
+			<div class="controls__slider-active">&nbsp;</div>
+			<div class="controls__playhead" style="left: {{state.playheadPosition || 50}}%;" ng-mousedown="handle.startSeeking($event)">&nbsp;</div>
 		</div>
+
 		
 	</div>
 		<div class="volume__btn" title="Volume">
