Captions and Scenes Added

--- a/app/assets/lib/c6ui/controls/controls.html
+++ b/app/assets/lib/c6ui/controls/controls.html
@@ -6,6 +6,13 @@
 		<button class="controls__btnReturn-icon" title="Return"><span class="ir">Return</span></button>
 		<button class="controls__btnFullscreen-icon" title="Return"><span class="ir">Fullscreen</span></button>
 		<div class="controls__slider">
+			<button class="controls__btnScene" style="left: 20%"><span class="ir">Sympathize</span></button>
+			<span class="controls__caption-bottom" style="left: 20%">Sympathize</span>
+			<button class="controls__btnScene" style="left: 25%"><span class="ir">Save Shaun</span></button>
+			<span class="controls__caption-top" style="left: 25%">Save Shaun</span>
+			<button class="controls__btnScene" style="left: 46%"><span class="ir">Do Something</span></button>
+			<span class="controls__caption-bottom" style="left: 46%">Do something</span>
+			<div class="controls__slider-past">&nbsp;</div>
 			<div class="controls__slider-active">&nbsp;</div>
 			<div class="controls__playhead" style="left: {{state.playheadPosition || 50}}%;" ng-mousedown="handle.startSeeking($event)">&nbsp;</div>
 			<div class="controls__slider-buffer">&nbsp;</div>
