Major style cleanup

--- a/app/assets/lib/c6ui/controls/controls.html
+++ b/app/assets/lib/c6ui/controls/controls.html
@@ -2,23 +2,29 @@
 	<div class="controls__btnPlayPause" title="Play/Pause" ng-click="handle.playPause()">
 		<button class="controls__btn{{state.playing ? 'Pause' : 'Play'}}-icon"><span class="ir">{{state.playing ? 'Pause' : 'Play'}}</span></button>
 	</div>
+
 	<div class="controls__seek">
 		<button class="controls__btnReturn-icon" title="Return"><span class="ir">Return</span></button>
 		<button class="controls__btnFullscreen-icon" title="Return"><span class="ir">Fullscreen</span></button>
 		<div class="controls__slider">
-			<button class="controls__btnScene" style="left: 20%"><span class="ir">Sympathize</span></button>
-			<span class="controls__caption-bottom" style="left: 20%">Sympathize</span>
-			<button class="controls__btnScene" style="left: 25%"><span class="ir">Save Shaun</span></button>
-			<span class="controls__caption-top" style="left: 25%">Save Shaun</span>
-			<button class="controls__btnScene" style="left: 46%"><span class="ir">Do Something</span></button>
-			<span class="controls__caption-bottom" style="left: 46%">Do something</span>
+			<div class="controls__scene" style="left: 20%; margin-left: -32px">
+				<button class="controls__scene-btn"><span class="ir">Sympathize</span></button>
+				<p class="controls__caption-bottom">Sympathize</p>
+			</div>
+			<div class="controls__scene" style="left: 25%; margin-left: -32.5px;">
+				<button class="controls__scene-btn"><span class="ir">Save Shaun</span></button>
+				<p class="controls__caption-top">Save Shaun</p>
+			</div>
+			<div class="controls__scene" style="left: 46%; margin-left: -40.5px;">  <!-- margin-left is negative half the element's width -->
+				<button class="controls__scene-btn"><span class="ir">Do Something</span></button>
+				<p class="controls__caption-bottom">Do something</p>
+			</div>
 			<div class="controls__slider-past">&nbsp;</div>
 			<div class="controls__slider-active">&nbsp;</div>
 			<div class="controls__playhead" style="left: {{state.playheadPosition || 50}}%;" ng-mousedown="handle.startSeeking($event)">&nbsp;</div>
 			<div class="controls__slider-buffer">&nbsp;</div>
 		</div>
 
-		
 	</div>
 		<div class="volume__btn" title="Volume">
 			<button class="volume__btnHigh-icon"><span class="ir">Mute/Unmute</span></button>
