--- a/src/controls/controls.html
+++ b/src/controls/controls.html
@@ -2,20 +2,35 @@
 	<div class="controls__btnPlayPause" title="Play/Pause" ng-click="handle.playPause()">
 		<button class="controls__btn{{state.playing ? 'Pause' : 'Play'}}-icon"><span class="ir">{{state.playing ? 'Pause' : 'Play'}}</span></button>
 	</div>
+
 	<div class="controls__seek">
 		<button class="controls__btnReturn-icon" title="Return"><span class="ir">Return</span></button>
 		<button class="controls__btnFullscreen-icon" title="Return"><span class="ir">Fullscreen</span></button>
 		<div class="controls__slider">
+			<div class="controls__scene" style="left: 20%; margin-left: -32px">
+				<button class="controls__scene-btn"><span class="ir">Sympathize</span></button>
+				<p class="controls__caption-bottom">Sympathize</p>
+			</div>
+			<div class="controls__scene" style="left: 25%; margin-left: -32.5px;">
+				<button class="controls__scene-btn"><span class="ir">Save Shaun</span></button>
+				<p class="controls__caption-top">Save Shaun</p>
+			</div>
+			<div class="controls__scene" style="left: 46%; margin-left: -40.5px;">  <!-- margin-left is negative half the element's width -->
+				<button class="controls__scene-btn"><span class="ir">Do Something</span></button>
+				<p class="controls__caption-bottom">Do something</p>
+			</div>
+			<div class="controls__slider-past">&nbsp;</div>
 			<div class="controls__slider-active">&nbsp;</div>
 			<div class="controls__playhead" style="left: {{state.playheadPosition || 50}}%;" ng-mousedown="handle.startSeeking($event)">&nbsp;</div>
+			<div class="controls__slider-buffer">&nbsp;</div>
 		</div>
 
-		
 	</div>
 		<div class="volume__btn" title="Volume">
 			<button class="volume__btnHigh-icon"><span class="ir">Mute/Unmute</span></button>
 			<div class="volume__box">
 			<div class="volume__slider">
+				<div class="volume__slider-active">&nbsp;</div>
 				<div class="volume__playhead">&nbsp;</div>
 			</div>
 		</div>
