--- a/app/assets/lib/c6ui/controls/controls.html
+++ b/app/assets/lib/c6ui/controls/controls.html
@@ -6,8 +6,9 @@
 	<div class="controls__seek" ng-mouseup="handle.stopSeeking()" ng-mouseleave="handle.stopSeeking()">
 		<button class="controls__btnReturn-icon" title="Return"><span class="ir">Return</span></button>
 		<button class="controls__btnFullscreen-icon" title="Return"><span class="ir">Fullscreen</span></button>
+
 		<div class="controls__slider" ng-click="handle.seekbarClick($event)">
-			
+			<div class="controls__slider-shadow">&nbsp;</div>	
 			<!-- branching video example-->
 			<div class="controls__scene" style="left: 20%; margin-left: -32px">
 				<button class="controls__scene-btn"><span class="ir">Sympathize</span></button>
