Progress bar states implemented. Working on segment functionality.

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="video" ng-controller="VideoPlayerController">
 			<video id="player" c6video c6-src="'http://media.w3.org/2010/05/sintel/trailer'"></video>
-			<c6-controls delegate="VideoPlayerCtrl" controller="VideoPlayerCtrl.ControlsController" class="controls"></c6-video-controls>
+			<c6-controls delegate="VideoPlayerCtrl" controller="VideoPlayerCtrl.ControlsController" segments="VideoPlayerCtrl.segments" class="controls"></c6-video-controls>
 		</div>
 	</body>
 </html>
