--- a/src/controls/controls.html
+++ b/src/controls/controls.html
@@ -38,7 +38,15 @@
 
 	</div>
 		<div class="volume__btn" title="Volume" ng-mouseenter="handle.volume.show()" ng-mouseleave="handle.volume.hide()">
-			<button class="volume__btn{{state.volume.levelTier()}}-icon" ng-click="handle.volume.muteUnmute()"><span class="ir">Mute/Unmute</span></button>
+			<!--<button class="volume__btn{{state.volume.levelTier()}}-icon" ng-click="handle.volume.muteUnmute()"><span class="ir">Mute/Unmute</span></button>-->
+
+			<button class="volume__btnVolume-icon"><span class="ir">Volume</span>
+				<div class="volume__btnVolume-low" style="opacity: 1"><span class="ir">Low</span></div>
+				<div class="volume__btnVolume-med" style="opacity: 1"><span class="ir">Med</span></div>
+				<div class="volume__btnVolume-high" style="opacity: 1"><span class="ir">High</span></div>
+				<div class="volume__btnVolume-mute" style="opacity: 0"><span class="ir">High</span></div>
+			</button>
+			
 			<div class="volume__box" style="display: none;" ng-mouseenter="handle.volume.show()" ng-mouseleave="handle.volume.hide(); handle.volume.stopSeeking();" ng-mouseup="handle.volume.stopSeeking()" ng-show="state.volume.show">
 			<div class="volume__slider" ng-click="handle.volume.seekbarClick($event)">
 				<div class="volume__slider-active" style="height: {{state.volume.playheadPosition || 0}}%;">&nbsp;</div>
