--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 		<script src="assets/lib/angular/angular.js"></script>
 		<script src="assets/lib/c6media/c6lib.video.js"></script>
 		<script src="assets/lib/c6ui/c6ui.js"></script>
+		<script src="assets/lib/c6ui/computed/computed.js"></script>
 		<script src="assets/lib/c6ui/controls/controls.js"></script>
 		<script src="assets/scripts/app.js"></script>
 		<script src="assets/scripts/controllers.js"></script>
