--- a/src/controls/controls.html
+++ b/src/controls/controls.html
@@ -11,7 +11,7 @@
 			<div class="controls__slider-shadow">&nbsp;</div>
 			<!-- branching video example-->
 			<c6-controls-node ng-repeat="node in state.nodes()" model="node" handlers="handle.node"></c6-controls-node>
-			<div class="controls__slider-past" style="width: {{state.pastSegmentsLength()}}%;">&nbsp;</div>
+			<div class="controls__slider-past" ng-style="{width: state.pastSegmentsLength() + '%'}">&nbsp;</div>
 
 			<!-- annotation video example
 			<div class="controls__annotation" style="left: 20%;">&nbsp;</div>
@@ -19,9 +19,9 @@
 			<div class="controls__annotation" style="left: 38%;">&nbsp;</div>
 			<div class="controls__annotation" style="left: 48%;">&nbsp;</div> -->
 
-			<div class="controls__slider-active" style="width: {{state.playheadPosition || 0}}%;">&nbsp;</div>
-			<div class="controls__playhead" ng-style="{left: state.playheadPosition + '%'}" ng-mousedown="handle.startSeeking($event)">&nbsp;</div>
-			<div ng-repeat="segment in state.segments()" class="controls__slider-buffer" style="width: {{segment.__c6Controls.position.width() || 0}}%; left: {{segment.__c6Controls.position.left()}}%;">&nbsp;</div>
+			<div class="controls__slider-active" ng-style="{width: (state.playheadPosition || 0) + '%'}">&nbsp;</div>
+			<div class="controls__playhead" ng-style="{left: state.playheadPosition + '%'}" ng-mousedown="handle.startSeeking()">&nbsp;</div>
+			<div ng-repeat="segment in state.segments()" class="controls__slider-buffer" ng-style="{width: (segment.__c6Controls.position.width() || 0) + '%', left: segment.__c6Controls.position.left() + '%;'}">&nbsp;</div>
 		</div>
 
 	</div>
@@ -29,16 +29,16 @@
 			<!--<button class="volume__btn{{state.volume.levelTier()}}-icon" ng-click="handle.volume.muteUnmute()"><span class="ir">Mute/Unmute</span></button>-->
 
 			<button class="volume__btnVolume-icon" ng-mouseenter="handle.volume.show()" ng-click="handle.volume.muteUnmute()"><span class="ir">Volume</span>
-				<div class="volume__btnVolume-low" style="opacity: {{state.volume.tiers.low()}};"><span class="ir">Low</span></div>
-				<div class="volume__btnVolume-med" style="opacity: {{state.volume.tiers.med()}};"><span class="ir">Med</span></div>
-				<div class="volume__btnVolume-high" style="opacity: {{state.volume.tiers.high()}};"><span class="ir">High</span></div>
-				<div class="volume__btnVolume-mute" style="opacity: {{state.volume.tiers.mute()}};"><span class="ir">High</span></div>
+				<div class="volume__btnVolume-low" ng-style="{opacity: state.volume.tiers.low()}"><span class="ir">Low</span></div>
+				<div class="volume__btnVolume-med" ng-style="{opacity: state.volume.tiers.med()}"><span class="ir">Med</span></div>
+				<div class="volume__btnVolume-high" ng-style="{opacity: state.volume.tiers.high()}"><span class="ir">High</span></div>
+				<div class="volume__btnVolume-mute" ng-style="{opacity: state.volume.tiers.mute()}"><span class="ir">High</span></div>
 			</button>
 			
 			<div class="volume__box" style="display: none;" ng-mouseenter="handle.volume.show()" ng-mouseleave="handle.volume.hide(); handle.volume.stopSeeking();" ng-mouseup="handle.volume.stopSeeking()" ng-show="state.volume.show">
 			<div class="volume__slider" ng-click="handle.volume.seekbarClick($event)">
-				<div class="volume__slider-active" style="height: {{state.volume.playheadPosition || 0}}%;">&nbsp;</div>
-				<div class="volume__playhead" style="bottom: {{state.volume.playheadPosition || 0}}%;" ng-mousedown="handle.volume.startSeeking()">&nbsp;</div>
+				<div class="volume__slider-active" ng-style="{height: (state.volume.playheadPosition || 0) + '%'}">&nbsp;</div>
+				<div class="volume__playhead" ng-style="{bottom: (state.volume.playheadPosition || 0) + '%'}" ng-mousedown="handle.volume.startSeeking()">&nbsp;</div>
 			</div>
 		</div>
 		</div>
