Removes hardcoding of assets folder.

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="assets/lib/c6ui/controls/controls.css">
 		<link rel="stylesheet" href="assets/styles/main.css">
 		
+		<script src="assets/scripts/main.js"></script>
 		<script src="assets/lib/angular/angular.js"></script>
 		<script src="assets/lib/c6media/c6lib.video.js"></script>
 		<script src="assets/lib/c6ui/c6ui.js"></script>
