Removed title from .c6-bar__app-title

--- a/src/bar/c6bar.html
+++ b/src/bar/c6bar.html
@@ -5,7 +5,7 @@
 	            <img src="assets/img/c6logo64x64.png" alt="Cinema6" width="32">
 	        </a>
 	    </li>
-	    <li class="c6-bar__app-space"><a href="#" title="Screenjacked" class="c6-bar__app-title"><span class="ir">Screenjacked</span></a></li>
+	    <li class="c6-bar__app-space"><a href="#" class="c6-bar__app-title"><span class="ir">Screenjacked</span></a></li>
 	    <li class="c6-settings__group hasDropdown">
 	        <div ng-click="showSettingsDropdown = showSettingsDropdown ? false : true;" class="c6-bar__settings clearfix">
 	            <span class="c6-settings__gear-icon"><span class="ir">Settings</span></span>
