Adds service for preloading image assets.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 		<script src="assets/lib/angular/angular.js"></script>
 		<script src="assets/lib/c6media/c6lib.video.js"></script>
 		<script src="assets/lib/c6ui/c6ui.js"></script>
+		<script src="assets/lib/c6ui/preload/preload.js"></script>
 		<script src="assets/lib/c6ui/sfx/sfx.js"></script>
 		<script src="assets/lib/c6ui/computed/computed.js"></script>
 		<script src="assets/lib/c6ui/controls/controls.js"></script>
