--- a/src/panels/c6-panels.html
+++ b/src/panels/c6-panels.html
@@ -1,2 +1,2 @@
-<div class="c6-panel__top" ng-show="panels.showUpper" ng-animate="\'upperPanel\'">&nbsp;</div>
-<div class="c6-panel__bottom" ng-show="panels.showLower" ng-animate="\'lower-panel\'">&nbsp;</div>
+<div class="c6-panel__top" ng-show="panels.showUpper" ng-animate="'upperPanel'">&nbsp;</div>
+<div class="c6-panel__bottom" ng-show="panels.showLower" ng-animate="'lower-panel'">&nbsp;</div>
