Fix test app. Disable sfx if iOS distort bug happens.

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
         <script src="assets/scripts/main.js"></script>
         <script src="assets/lib/angular/angular.js"></script>
         <script src="assets/lib/c6ui/c6ui.js"></script>
+        <script src="assets/lib/c6ui/templates.js"></script>
         <script src="assets/lib/c6ui/videos/video.js"></script>
         <script src="assets/lib/c6ui/imagepreloader/imagepreloader.js"></script>
         <script src="assets/lib/c6ui/sfx/sfx.js"></script>
@@ -17,6 +18,8 @@
         <script src="assets/lib/c6ui/mouseactivity/mouseactivity.js"></script>
         <script src="assets/scripts/app.js"></script>
         <script src="assets/scripts/controllers.js"></script>
+        <script src="assets/lib/c6ui/format/format.js"></script>
+        <script src="assets/lib/c6ui/c6log.js"></script>
     </head>
     <body>
         <div class="video" ng-controller="VideoPlayerController">
