--- a/app/index.html
+++ b/app/index.html
@@ -1,44 +1,15 @@
 <!doctype html>
-<html ng-app="app" ng-controller="AppController">
+<html ng-controller="AppController">
     <head>
+        <base href="/assets/" />
         <title>Cinema6 UI Test App</title>
 
-        <link rel="stylesheet" href="assets/lib/c6ui/controls/css/controls.css">
-        <link rel="stylesheet" href="assets/styles/main.css">
-
-        <script src="assets/scripts/main.js"></script>
-        <script src="https://s3.amazonaws.com/c6.dev/ext/modernizr/modernizr.custom.71747.js"></script>
-        <script src="assets/lib/angular/angular.js"></script>
-        <script src="assets/lib/c6ui/c6ui.js"></script>
-        <script src="assets/lib/c6ui/templates.js"></script>
-        <script src="assets/lib/c6ui/videos/video.js"></script>
-        <script src="assets/lib/c6ui/imagepreloader/imagepreloader.js"></script>
-        <script src="assets/lib/c6ui/sfx/sfx.js"></script>
-        <script src="assets/lib/c6ui/computed/computed.js"></script>
-        <script src="assets/lib/c6ui/controls/controls.js"></script>
-        <script src="assets/lib/c6ui/mouseactivity/mouseactivity.js"></script>
-        <script src="assets/scripts/app.js"></script>
-        <script src="assets/scripts/controllers.js"></script>
-        <script src="assets/lib/c6ui/format/format.js"></script>
-        <script src="assets/lib/c6ui/browser/info.js"></script>
-        <script src="assets/lib/c6ui/browser/user_agent.js"></script>
-        <script src="assets/lib/c6ui/url/urlparser.js"></script>
-        <script src="assets/lib/c6ui/c6log.js"></script>
-        <script src="assets/lib/c6ui/http/http.js"></script>
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        <div class="video" ng-controller="VideoPlayerController">
-            <div c6-mouse-activity="2500">
-                <div class="player" ng-repeat="segment in VideoPlayerCtrl.segments" ng-show="$index === VideoPlayerCtrl.currentVideoIndex">
-                    <video id="{{$index}}" c6-video c6-src="segment.src"></video>
-                </div>
-            </div>
-            <div ng-mouseenter="VideoPlayerCtrl.userIsUsingControls = true;" ng-mouseleave="VideoPlayerCtrl.userIsUsingControls = false;" ng-show="VideoPlayerCtrl.showControls">
-                <c6-controls delegate="VideoPlayerCtrl" controller="VideoPlayerCtrl.ControlsController" segments="VideoPlayerCtrl.segments" nodes="VideoPlayerCtrl.nodes" buttons="['return', 'fullscreen']" class="controls"></c6-video-controls>
-            </div>
-        </div>
         <div>
             <img alt="vimeo thumb" ng-src="{{AppCtrl.vimeo.thumbnail_small}}">
         </div>
+        <script src="//lib.cinema6.com/require/2.1.5/require.js" data-main="scripts/main"></script>
     </body>
 </html>
