Include players in the demo app.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
         <div>
             <img alt="vimeo thumb" ng-src="{{AppCtrl.vimeo.thumbnail_small}}">
         </div>
+        <youtube-player videoid="dqoPXC60l_s" autoplay style="height: 500px; display: block;" start="15" end="25"></youtube-player>
+        <vimeo-player videoid="108018156" autoplay style="height: 500px; display: block;" start="15" end="25"></vimeo-player>
+        <dailymotion-player videoid="x279hwy" autoplay style="height: 500px; display: block;"></dailymotion-player>
         <script src="//lib.cinema6.com/require/2.1.5/require.js" data-main="scripts/main"></script>
     </body>
 </html>
