--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <!-- <youtube-player videoid="dqoPXC60l_s" autoplay style="height: 500px; display: block;" start="15" end="25"></youtube-player> -->
         <!-- <vimeo-player videoid="108018156" autoplay style="height: 500px; display: block;" start="15" end="25"></vimeo-player> -->
         <!-- <dailymotion-player videoid="x279hwy" autoplay style="height: 500px; display: block;"></dailymotion-player> -->
+
         <vast-player videoid="1234" autoplay ad-tag="{{AppCtrl.vastTag}}"></vast-player>
         <div ng-show="vastAdReady">
             <button ng-click="AppCtrl.playVastAd()">Play Ad</button>
@@ -20,13 +21,15 @@
             <button ng-click="AppCtrl.reloadVastAd()">Reload Ad</button>
             <button ng-click="AppCtrl.changeVastAdTag()">Change Ad Tag</button>
         </div>
-        <!-- <vpaid-player videoid="12345" autoplay ad-tag="{{AppCtrl.vpaidTag}}" style="height:500px; width:700px; display:block; position:relative;"></vpaid-player>
+
+        <vpaid-player videoid="12345" autoplay ad-tag="{{AppCtrl.vpaidTag}}" style="height:500px; width:700px; display:block; position:relative;"></vpaid-player>
         <div ng-show="adReady">
             <button ng-click="AppCtrl.playVpaidAd()">Play Ad</button>
             <button ng-click="AppCtrl.pauseVpaidAd()">Pause Ad</button>
             <button ng-click="AppCtrl.reloadVpaidAd()">Reload Ad</button>
             <button ng-click="AppCtrl.changeVpaidAdTag()">Change Ad Tag</button>
-        </div> -->
+        </div>
+
         <script src="//lib.cinema6.com/require/2.1.5/require.js" data-main="scripts/main"></script>
     </body>
 </html>
