Revert "Modify VAST service to get data from Adtech XML format"

--- a/app/index.html
+++ b/app/index.html
@@ -22,15 +22,15 @@
             <button ng-click="AppCtrl.changeVastAdTag()">Change Ad Tag</button>
         </div>
 
-        <!-- <vpaid-player videoid="12345" ad-tag="{{AppCtrl.vpaidTag}}" style="height:500px; width:700px; display:block; position:relative;"></vpaid-player>
+        <vpaid-player videoid="12345" ad-tag="{{AppCtrl.vpaidTag}}" style="height:500px; width:700px; display:block; position:relative;"></vpaid-player>
         <div ng-show="adReady">
             <button ng-click="AppCtrl.playVpaidAd()">Play Ad</button>
             <button ng-click="AppCtrl.pauseVpaidAd()">Pause Ad</button>
             <button ng-click="AppCtrl.reloadVpaidAd()">Reload Ad</button>
             <button ng-click="AppCtrl.changeVpaidAdTag()">Change Ad Tag</button>
-        </div> -->
+        </div>
 
-        <!-- <embedded-player code="{{AppCtrl.yahooCode}}"></embedded-player> -->
+        <embedded-player code="{{AppCtrl.yahooCode}}"></embedded-player>
 
         <script src="//lib.cinema6.com/require/2.1.5/require.js" data-main="scripts/main"></script>
     </body>
